Bug 144272 - EDITING Changing paragraph style is not recorded as tracked change
Summary: EDITING Changing paragraph style is not recorded as tracked change
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 inReleaseNotes
Keywords:
Depends on:
Blocks: Track-Changes-TextFormatting
  Show dependency treegraph
 
Reported: 2021-09-02 14:17 UTC by NISZ LibreOffice Team
Modified: 2023-09-29 10:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (14.67 KB, application/vnd.oasis.opendocument.text)
2021-09-02 14:17 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document in Writer (77.08 KB, image/png)
2021-09-02 14:18 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Writer after changing the paragraph style (75.96 KB, image/png)
2021-09-02 14:18 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-09-02 14:17:19 UTC
Created attachment 174737 [details]
Example file from Writer

When a paragraph gets a different style assigned while change tracking is enabled, there is no change tracking entry generated, unlike in Word.

Steps to reproduce:
    1. Open a new Writer document, have some text in it.
    2. Enable change tracking
    3. Change the paragraph style of the text

Actual results:
The Manage Changes dialog does not show a tracked formatting change.
Fun fact: DOCX import/export and accepting/rejecting Word-made paragraph style changes works fine.

Expected results:
Changing the paragraph style should generate a change tracking entry.

LibreOffice details:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d5ade739771ddf06cc7ee6d4af15672bfcf09ed6
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

and back to 3.5.0
Comment 1 NISZ LibreOffice Team 2021-09-02 14:18:41 UTC
Created attachment 174738 [details]
Screenshot of the original document in Writer
Comment 2 NISZ LibreOffice Team 2021-09-02 14:18:59 UTC
Created attachment 174739 [details]
Screenshot of the problem in Writer after changing the paragraph style
Comment 3 Dieter 2021-09-17 07:30:48 UTC
I confirm it with

Version: 7.2.1.2 (x64) / LibreOffice Community
Build ID: 87b77fad49947c1441b67c559c339af8f3517e22
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL

Additional information
Change of Character Style is recorded. therefor I would treat this as a bug and not as enhancement request.
Comment 4 Commit Notification 2021-09-27 14:38:02 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c364532e6b06391a0584f58142c2366d28c803dd

tdf#144272 sw: track change of paragraph style

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 László Németh 2021-09-27 14:38:24 UTC
tdf#144272 sw: track change of paragraph style

Modifying style of a paragraph, e.g. from "Standard"
or "Text body" to "Heading n" styles wasn't recorded
by change tracking.

Now it's possible to track and reject these changes
also after DOCX export/import.

Note: ODF track changes doesn't support format-only
changes, so likely it will need to export the paragraph
content two times, with the old and with the new
paragraph styles, too).

Note: selecting multiple paragraphs to modify their
styles at once doesn't record the changes, yet, because
multi-paragraph ParagraphFormat redline range hasn't
supported by AppendRedline().
Comment 6 NISZ LibreOffice Team 2021-10-04 12:53:09 UTC
Verified in: 

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: c2de581d1943df2d84f2b71817b6a8bee41f0217
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 7 stragu 2021-12-30 05:13:55 UTC
reviewing release notes.

Also verified as fixed on Ubuntu 18.04:

Version: 7.3.0.1 / LibreOffice Community
Build ID: 840fe2f57ae5ad80d62bfa6e25550cb10ddabd1d
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded