tdf#144272 sw: track change of paragraph style

Modifying style of a paragraph, e.g. from "Standard"
or "Text body" to "Heading n" styles wasn't recorded
by change tracking.

Now it's possible to track and reject these changes
also after DOCX export/import.

Note: ODF track changes doesn't support format-only
changes, so likely it will need to export the paragraph
content two times, with the old and with the new
paragraph styles, too).

Note: selecting multiple paragraphs to modify their
styles at once doesn't record the changes, yet, because
multi-paragraph ParagraphFormat redline range hasn't
supported by AppendRedline().

Change-Id: I2d81fa23c59b7b75b3101dc3f2bb8c9eed8ab165